--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ block content
         .ui.items
             .item
                 .image 
-                    img(src="images/prof.jpg", alt="alt")
+                    img(src="images/prof.jpg", alt="Szabó Martin profilképe")
                 .content
                     a.header(href="#") Szabó Martin
                     .description
