--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -1,5 +1,5 @@
 mixin title($page)
-    title Szabó Martin - #{$page}
+    title #{$page}
 
 mixin menu(selected)
     - const menuData = [{"text": "Főoldal", "link": "index.html"},{"text": "Projektek", "link": "projects.html"}]
@@ -17,18 +17,18 @@ html(lang="hu")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
         meta(name="author" content="Szabó Martin")
-        meta(name="description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója")
+        meta(name="description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója.")
         meta(property="og:type" content="website")
         meta(property="og:url" content="https://www.szabomartin.com/")
         meta(property="og:title" content="Szabó Martin")
         meta(property="og:image" content="https://www.szabomartin.com/images/prof.jpg")
-        meta(property="og:description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója")
+        meta(property="og:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója.")
         meta(property="og:determiner" content="")
         meta(property="og:site_name" content="Szabó Martin")
         meta(property="og:site_name" content="Szabó Martin")
-        meta(name="twitter:title" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója")
+        meta(name="twitter:title" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója.")
         meta(name="twitter:image" content="https://www.szabomartin.com/images/prof.jpg")
-        meta(name="twitter:description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója")
+        meta(name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója.")
 
 
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css")
@@ -39,9 +39,11 @@ html(lang="hu")
     body
 
         .main-col
+            div(style="display:hidden;")
+                h1 Szabó Martin oldala
             .ui.secondary.pointing.menu
                 block menu
-                    +menu("Főoldal")   
+                    +menu("")   
                 
                 .right.menu
                     a.ui.item(href="index.html") Kapcsolat
