--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -11,6 +11,12 @@ block content
         .ui.items.divided.relaxed
             .item
                 .content 
+                    a.header(target='_blank' href="https://github.com/szaffo/dudeGame") Dude Java játék
+                    .description
+                        p Egy Java játék, ami beadandónak indult. Platformer, rage game.
+
+            .item
+                .content 
                     a.header(target='_blank' href="https://diakkedvezmeny.com") Országos Diákkedvezmény Adatbázis
                     .description
                         p Diákkedvezményeket összegyűjtő oldal
