--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -11,7 +11,8 @@ block content
         .ui.items.divided.relaxed
             .item
                 .content 
-                    a.header(target='_blank' href="https://github.com/szaffo/dudeGame") Dude Java játék
+                    a.header(href="/dude.html") Dude Java játék
+                    //- a.header(target='_blank' href="https://github.com/szaffo/dudeGame") Dude Java játék
                     .description
                         p Egy Java játék, ami beadandónak indult. Platformer, rage game.
 
