--- a/src/pug/links.pug
+++ b/src/pug/links.pug
@@ -14,29 +14,10 @@ block content
             .item
                 i.large.file.middle.aligned.icon
                 .content
-                    a.header(href="adatb.html") Adatb próbavizsga
+                    a.header(href="adatb.html") Adatb helper
                     .description 2020.05.25.
-
-//-         <div class="ui relaxed divided list">
-//-   <div class="item">
-//-     <i class="large github middle aligned icon"></i>
-//-     <div class="content">
-//-       <a class="header">Semantic-Org/Semantic-UI</a>
-//-       <div class="description">Updated 10 mins ago</div>
-//-     </div>
-//-   </div>
-//-   <div class="item">
-//-     <i class="large github middle aligned icon"></i>
-//-     <div class="content">
-//-       <a class="header">Semantic-Org/Semantic-UI-Docs</a>
-//-       <div class="description">Updated 22 mins ago</div>
-//-     </div>
-//-   </div>
-//-   <div class="item">
-//-     <i class="large github middle aligned icon"></i>
-//-     <div class="content">
-//-       <a class="header">Semantic-Org/Semantic-UI-Meteor</a>
-//-       <div class="description">Updated 34 mins ago</div>
-//-     </div>
-//-   </div>
-//- </div>
+            .item
+                i.large.file.middle.aligned.icon
+                .content
+                    a.header(href="/stratego") Startego demo
+                    .description 2020.05.25.
