--- a/src/pug/links.pug
+++ b/src/pug/links.pug
@@ -24,5 +24,5 @@ block content
             .item
                 i.npm.middle.aligned.icon.large
                 .content
-                    a.header(href="/stratego") Markdown to Pug CLI
+                    a.header(href="https://www.npmjs.com/package/markdown-to-pug-cli") Markdown to Pug CLI
                     .description 2020.05.27.
