--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -44,6 +44,13 @@ html(lang="hu")
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css")
         link(rel="stylesheet", href="css/main.min.css", attr)
 
+        //- highlight.js css
+        link(rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/styles/monokai.min.css")
+        //- highlight.js code
+        script(src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js")
+        //- highlight.js trigger
+        script hljs.initHighlightingOnLoad()
+
         block title
 
     body
@@ -58,7 +65,6 @@ html(lang="hu")
             block content
                
 
-
-
+       
         script(src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.min.js")
