added some code
Co-authored-by: Gábor Leczó <devleczo@gmail.com>

--- a/src/pug/backendHelper.pug
+++ b/src/pug/backendHelper.pug
@@ -19,7 +19,12 @@ block mdContent
             li
               a(href="#apollo-server--graphql") Apollo server & GraphQL
         li
-          a(href="#commands") Commands
+          a(href="#commandss") Commandss
+        li
+          a(href="#relationships") Relationships
+          ul
+            li
+              a(href="#sequalize") Sequalize
   h2(id="linkek") Linkek
   ul
     li
@@ -38,7 +43,7 @@ block mdContent
   pre.hljs.language-bash
     code. 
       # Sequalize
-      $ npm install sequelize
+      $ npm install sequelize sequelize-cli
       
       # Feathers
       $ npm install @feathersjs/feathers @feathersjs/cli 
@@ -163,7 +168,7 @@ block mdContent
       }
       run();
       
-  h2(id="commands") Commands
+  h2(id="commandss") Commandss
   pre.hljs.language-bash
     code. 
       # Sequalize generate model
@@ -172,3 +177,25 @@ block mdContent
       # Feathers
       $ npx feathers init
       $ npx feathers generate service
+      
+      # Sequalize
+      $ npx sequalize init
+      $ npx sequalize model:generate
+      $ npx sequelize migration:generate
+      
+  h2(id="relationships") Relationships
+  h3(id="sequalize") Sequalize
+  pre.hljs.language-js
+    code. 
+      ...
+      // eslint-disable-next-line no-unused-vars
+        dogs.associate = function (models) {
+          // Define associations here
+          // See http://docs.sequelizejs.com/en/latest/docs/associations/
+          dogs.belongsTo(models.users); // <-- Belongs to ONE user
+          dogs.hasMany(models.puppy); // <-- 1 Dog can have many puppy
+          dogs.belongsToMany(models.toys, {through: 'dogs_toys'}); // <-- Many to Many a dogs_toys táblával
+        };
+      
+        return dogs;
+      ...
