--- a/src/pug/links.pug
+++ b/src/pug/links.pug
@@ -14,6 +14,11 @@ block content
             .item
                 i.large.file.middle.aligned.icon
                 .content
+                    a.header(href="szaHelper.html") SZA helper
+                    .description 2020.05.31.
+            .item
+                i.large.file.middle.aligned.icon
+                .content
                     a.header(href="backendHelper.html") Backend helper
                     .description 2020.05.29.
             .item
