--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -42,6 +42,7 @@ html(lang="hu")
 
 
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css")
+        link(href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet")
         link(rel="stylesheet", href="css/main.min.css", attr)
 
         //- highlight.js css
