--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -2,3 +2,7 @@
     max-width: 900px
     margin: auto
     padding: 40px 10px
+
+html 
+    h1, h2, h3, h4, h5, h6, p 
+        font-family: 'Quicksand', sans-serif !important 
