--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,3 +3,7 @@
   margin: auto;
   padding: 40px 10px;
 }
+
+html h1, html h2, html h3, html h4, html h5, html h6, html p {
+  font-family: 'Quicksand', sans-serif !important;
+}
